--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,5 +3,5 @@
   <% post.errors.full_messages_for(:content).each do |message| %>
     <span class="text-danger"><%= message %></span>
   <% end %>
-  <%= form.submit class: "btn btn-primary w-100" %>
+  <%= form.submit class: "btn btn-primary w-100 mb-2" %>
 <% end %>
