--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,8 +1,16 @@
 <div class="card mb-2">
-  <div class="card-link text-end">
+  <div class="card-link text-end mx-1">
     <%= render 'link', post: post %>
   </div>
-  <h1 class="card-text ms-1 mb-1">
+  <h1 class="card-text mb-2 mx-1">
     <%= link_to post.content, post, class: "text-decoration-none text-dark" %>
   </h1>
+  <div class="card-text border-top">
+    <% if post.comments.size == 0 %>
+      <span class="ms-2 bi bi-chat fs-5"><span class="fs-6 text-secondary"> 0 comment</span></span>
+    <% else %>
+      <span class="ms-2 bi bi-chat-text fs-5">
+      <span class="fs-6 text-secondary"> <%= pluralize(post.comments.size, ' comment') %></span></span>
+    <% end %>
+  </div>
 </div>
