--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,6 @@
 <div class="card mb-2">
   <div class="card-link text-end mx-1">
+    <span class="text-secondary"><%= post.user.name unless post.user.nil? %></span>
     <%= render 'link', post: post %>
   </div>
   <h1 class="card-text mb-2 mx-1">
