--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,18 @@
 
   <body class="container col-12 col-sm-10 col-md-7 col-lg-6 col-xl-5">
     <div class="row justify-content-between">
-      <%= link_to '', root_path, class: "col-8 bi bi-arrow-left-circle fs-3" %>
-      <span class="col-3 text-end">
-        <%= User.first.name %>
-        <%= image_tag("undraw_female_avatar_w3jk.png", width: "40%", alt: "User profile picture")  %>
-      </span>
+      <%= link_to '', root_path, class: "col-2 bi bi-arrow-left-circle fs-3" %>
+      <% if logged_in? %>
+        <span class="col-10 text-end">
+          <%= @_current_user.name %>
+          <%= image_tag("undraw_female_avatar_w3jk.png", width: "46", alt: "User profile picture")  %>
+          <%= link_to '', logout_path, data: { turbo_method: :delete } , class: "fs-5 bi bi-box-arrow-right text-secondary" %>
+        </span>
+      <% else %>
+        <div class="col-10 text-end align-self-center">
+          <%= render 'logins/form' %>
+        </div>
+      <% end %>
     </div>
     <%= yield %>
   </body>
