--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body class="container col-12 col-sm-10 col-md-7 col-lg-6 col-xl-5">
+    <% if flash[:notice] %>
+      <div class="p-1 mb-0 alert alert-danger alert-dismissible fade show" role="alert">
+        <span class="bi bi-exclamation-triangle-fill"></span>
+        <%= flash[:notice] %>
+        <button class="p-2 btn btn-sm btn-close" data-bs-dismiss="alert"></button>
+      </div>
+    <% end %>
     <div class="row justify-content-between">
       <%= link_to '', root_path, class: "col-2 bi bi-arrow-left-circle fs-3" %>
       <% if logged_in? %>
