--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,19 +1,26 @@
 <div class="border rounded-bottom" style="margin-top: -6px;">
   <%= form_with model: [post, post.comments.build] do |form| %>
     <%= form.hidden_field :user_id, value: @_current_user.id if logged_in? %>
-    <%= form.text_field :content, placeholder: "add comment..", class: "form-control border-0 mb-1" %>
+    <%= form.text_field :content, placeholder: "Add a comment..", class: "form-control border-0 mb-1" %>
   <% end %>
-  <div class="card-text mx-1 ms-2">
-    <div class="row">
-      <% post.comments.each do |comment| %>
-        <% unless comment.content.nil? %>
-          <p class="col-11">
-            <span class="text-secondary"><%= comment.user.name unless comment.user_id.nil? %></span>
+  <div class="card-text">
+    <% post.comments.each do |comment| %>
+      <% unless comment.content.nil? %>
+        <p class="row justify-content-between">
+          <span class="col-1">
+            <%= image_tag(comment.user.picture, width: "40", alt: "User profile picture") %>
+          </span>
+          <span class="col-10">
+            <span class="d-block text-secondary"><%= comment.user.name unless comment.user_id.nil? %></span>
             <%= comment.content %>
-          </p>
-          <%= link_to '', post_comment_path(post, comment), data: { turbo_method: :delete }, class: "text-end text-danger col-1 bi bi-trash3" %>
-        <% end %>
+          </span>
+          <span class="col-1 text-end pe-3">
+            <% if logged_in? && @_current_user.id == comment.user_id %>
+              <%= link_to '', post_comment_path(post, comment), data: { turbo_method: :delete }, class: "text-danger bi bi-trash3" %>
+            <% end %>
+          </span>
+        </p>
       <% end %>
-    </div>
+    <% end %>
   </div>
 </div>
