--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,17 +1,20 @@
 <div class="card mb-2">
-  <div class="card-link text-end mx-1">
-    <span class="text-secondary"><%= post.user.name unless post.user.nil? %></span>
-    <%= render 'link', post: post %>
+  <div class="card-link row justify-content-between">
+    <span class="col-8 text-secondary">
+      <%= image_tag(post.user.picture, width: "40", alt: "User profile picture") %>
+      <%= post.user.name unless post.user.nil? %>
+    </span>
+    <span class="col-2 text-end me-1"><%= render 'link', post: post %></span>
   </div>
   <h1 class="card-text mb-2 mx-1">
     <%= link_to post.content, post, class: "text-decoration-none text-dark" %>
   </h1>
   <div class="card-text border-top">
     <% if post.comments.size == 0 %>
-      <span class="ms-2 bi bi-chat fs-5"><span class="fs-6 text-secondary"> 0 comment</span></span>
+      <span class="ms-2 bi bi-chat fs-5"><span class="fs-6 text-secondary"> 0</span></span>
     <% else %>
       <span class="ms-2 bi bi-chat-text fs-5">
-      <span class="fs-6 text-secondary"> <%= pluralize(post.comments.size, ' comment') %></span></span>
+      <span class="fs-6 text-secondary"> <%= post.comments.size %></span></span>
     <% end %>
   </div>
 </div>
