--- a/app/views/logins/_form.html.erb
+++ b/app/views/logins/_form.html.erb
@@ -1,5 +1,12 @@
-<%= form_with url: logins_path, class: "input-group input-group-sm" do |form| %>
-  <%= form.text_field :name, placeholder: "name", class: "form-control" %>
-  <%= form.password_field :password, placeholder: "password", class: "form-control" %>
-  <%= form.submit 'log in', class: 'btn btn-primary' %>
-<% end %>
+<div class="row">
+  <div class="col-9">
+    <%= form_with url: logins_path, class: "input-group input-group-sm" do |form| %>
+      <%= form.text_field :name, placeholder: "name", class: "form-control" %>
+      <%= form.password_field :password, placeholder: "password", class: "form-control" %>
+      <%= form.submit 'log in', class: 'btn btn-primary' %>
+    <% end %>
+  </div>
+  <div class="col-3">
+    <%= link_to 'Sign up', new_user_path, class: "btn btn-outline-primary btn-sm" %>
+  </div>
+</div>
