--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,12 +1,10 @@
 <div class="card mb-2">
   <div class="card-link row justify-content-between">
     <span class="col-8 text-secondary">
-      <% unless post.user.nil? %>
-      <%= image_tag(post.user.picture, width: "40", alt: "User profile picture") %>
-      <% end %>
+      <%= picture(post.user) %>
       <%= post.user.name unless post.user.nil? %>
     </span>
-    <span class="col-2 text-end me-1"><%= render 'link', post: post %></span>
+    <span class="col-2 text-end me-1"><%= render 'posts/link', post: post %></span>
   </div>
   <h1 class="card-text mb-2 mx-1">
     <%= link_to post.content, post, class: "text-decoration-none text-dark" %>
