--- a/app/views/logins/_form.html.erb
+++ b/app/views/logins/_form.html.erb
@@ -7,6 +7,6 @@
     <% end %>
   </div>
   <div class="col-3">
-    <%= link_to 'Sign up', new_user_path, class: "btn btn-outline-primary btn-sm" %>
+    <%= link_to 'Sign up', new_user_path, class: "bg-white btn btn-outline-primary btn-sm" %>
   </div>
 </div>
