--- a/app/views/posts/_link.html.erb
+++ b/app/views/posts/_link.html.erb
@@ -1,4 +1,4 @@
 <% if logged_in? && @_current_user.id == post.user_id %>
-  <%= link_to '', edit_post_path(post), class: " fs-6 bi bi-pencil" %>
-  <%= link_to '', post_path(post), data: { turbo_method: :delete }, class: "fs-6 bi bi-trash-fill text-danger" %>
+  <%= link_to '', edit_post_path(post), class: "hover-text-info fs-6 bi bi-pencil text-secondary" %>
+  <%= link_to '', post_path(post), data: { turbo_method: :delete }, class: "hover-text-danger fs-6 bi bi-trash-fill text-danger" %>
 <% end %>
