Style with theme, new header, and logo

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,5 +4,5 @@
   <% post.errors.full_messages_for(:content).each do |message| %>
     <span class="text-danger"><%= message %></span>
   <% end %>
-  <%= form.submit class: "btn btn-primary w-100 mb-2" %>
+  <%= form.submit class: "btn btn-gradient w-100 mb-2 text-white" %>
 <% end %>
