--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,5 +11,5 @@
   <% @user.errors.full_messages_for(:password).each do |message| %>
     <span class="text-danger"><%= message %></span>
   <% end %>
-  <%= form.submit class: 'btn btn-primary w-100 my-2' %>
+  <%= form.submit class: 'btn btn-gradient w-100 my-2 text-white'%>
 <% end %>
