--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,18 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <%= favicon_link_tag 'Postoo-Commentoo.png' %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <style>
+    a:hover {
+        color: purple;
+    }
+
     .hover-text-info:hover {
-        color: #0b5ed7 !important;
+        color: #662d91 !important;
     }
     .hover-text-danger:hover {
         color: #e30012 !important;
@@ -21,14 +26,31 @@
     .hover-info:hover {
         border-radius: 50%;
         padding: 4px 8px;
-        background-color: lightblue;
-        color: #0b5ed7 !important;
+        background-color: #DDA0DD;
+        color: #662d91 !important;
     }
     .hover-danger:hover {
         border-radius: 50%;
         padding: 4px 8px;
         background-color: lightpink;
         color: #bb2d3b !important;
+    }
+
+    .btn-gradient {
+        border-color: white;
+        background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
+    }
+
+    .color-theme {
+        border: 10px;
+        border-color: green;
+        color: #662d91 ;
+    }
+    .color-theme-light {
+        color: #DDA0DD !important;
+    }
+    .color-brand {
+        color: darkmagenta !important;
     }
   </style>
 
@@ -40,20 +62,27 @@
         <button class="btn btn-close" data-bs-dismiss="alert"></button>
       </div>
     <% end %>
+
     <div class="row justify-content-between">
-      <%= link_to '', root_path, class: "col-2 bi bi-arrow-left-circle fs-3" %>
+      <a href="/" class="navbar-brand text-center">
+        <span class="bi bi-circle-fill display-6 color-theme"></span>
+        <span class="bi bi-circle-fill display-6 color-theme-light"></span>
+        <span class="color-brand">PostooCommentoo</span>
+      </a>
       <% if logged_in? %>
-        <span class="col-10 text-end">
+        <%= link_to '', root_path, class: "col-2 bi bi-arrow-left-circle fs-3 color-theme" %>
+        <span class="col-10 text-end mb-2">
           <%= @_current_user.name %>
           <%= picture(@_current_user) %>
-          <%= link_to '', logout_path, data: { turbo_method: :delete } , class: "fs-5 bi bi-box-arrow-right text-secondary" %>
+          <%= link_to '', logout_path, data: { turbo_method: :delete }, class: "fs-5 bi bi-box-arrow-right color-theme" %>
         </span>
       <% else %>
-        <div class="col-10 text-end align-self-center">
+        <div class="col-12 mt-2">
           <%= render 'logins/form' %>
         </div>
       <% end %>
     </div>
+
     <%= yield %>
   </body>
 </html>
