--- a/app/views/logins/_form.html.erb
+++ b/app/views/logins/_form.html.erb
@@ -1,12 +1,13 @@
 <div class="row">
-  <div class="col-9">
-    <%= form_with url: logins_path, class: "input-group input-group-sm" do |form| %>
+  <div class="col-12">
+    <%= form_with url: logins_path, class: "input-group input-group" do |form| %>
       <%= form.text_field :name, placeholder: "name", class: "form-control" %>
       <%= form.password_field :password, placeholder: "password", class: "form-control" %>
-      <%= form.submit 'log in', class: 'btn btn-primary' %>
+      <%= form.submit 'Login', class: 'btn btn-gradient text-white' %>
     <% end %>
   </div>
-  <div class="col-3">
-    <%= link_to 'Sign up', new_user_path, class: "bg-white btn btn-outline-primary btn-sm" %>
-  </div>
+    <p class="col-12 text-center mt-1 border-light">
+      Not have an account?
+      <%= link_to 'Sign up now', new_user_path, class: "" %>
+    </p>
 </div>
