--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,15 +42,22 @@
     }
 
     .color-theme {
-        border: 10px;
-        border-color: green;
-        color: #662d91 ;
+        color: #662d91 !important;
     }
     .color-theme-light {
         color: #DDA0DD !important;
     }
     .color-brand {
         color: darkmagenta !important;
+    }
+
+    input:focus {
+        border:1px solid #DDA0DD !important;
+        box-shadow: 0 0 10px #DDA0DD !important; ;
+    }
+    textarea:focus {
+        border:1px solid #DDA0DD !important;
+        box-shadow: 0 0 10px #DDA0DD !important; ;
     }
   </style>
 
