--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,22 @@
-<h1>Sign up</h1>
+<% content_for :signup do %>
+  <p class="col-12 text-center mt-1 border-light">
+    Have an account?
+    <%= link_to 'Login now', root_path, class: "" %>
+  </p>
 
-<%= form_with model: @user do |form| %>
-  <%= form.label :name, class: 'form-label' %>
-  <%= form.text_field :name, class: 'form-control' %>
-  <% @user.errors.full_messages_for(:name).each do |message| %>
-    <span class="text-danger"><%= message %></span><br>
+  <h1>Sign up</h1>
+
+  <%= form_with model: @user do |form| %>
+    <%= form.label :name, class: 'form-label' %>
+    <%= form.text_field :name, class: 'form-control' %>
+    <% @user.errors.full_messages_for(:name).each do |message| %>
+      <span class="text-danger"><%= message %></span><br>
+    <% end %>
+    <%= form.label :password, class: 'form-label' %>
+    <%= form.password_field :password, class: 'form-control'  %>
+    <% @user.errors.full_messages_for(:password).each do |message| %>
+      <span class="text-danger"><%= message %></span>
+    <% end %>
+    <%= form.submit class: 'btn btn-gradient w-100 my-2 text-white'%>
   <% end %>
-  <%= form.label :password, class: 'form-label' %>
-  <%= form.password_field :password, class: 'form-control'  %>
-  <% @user.errors.full_messages_for(:password).each do |message| %>
-    <span class="text-danger"><%= message %></span>
-  <% end %>
-  <%= form.submit class: 'btn btn-gradient w-100 my-2 text-white'%>
 <% end %>
