--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,6 @@
   <% end %>
 </div>
 
-<% @user.posts.each do |post| %>
+<% @user.posts.recent.each do |post| %>
   <%= render 'posts/post', post: post %>
 <% end %>
