--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,7 +2,8 @@
   <div class="card-link row justify-content-between">
     <span class="col-8 text-secondary">
       <%= picture(post.user) %>
-      <%= post.user.name unless post.user.nil? %>
+      <span class="text-dark"><%= post.user.name unless post.user.nil? %></span>
+      <%= time_ago_in_words_only_today post.created_at%>
     </span>
     <span class="col-2 text-end me-1"><%= render 'posts/link', post: post %></span>
   </div>
