--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -22,7 +22,7 @@
             <%= picture(comment.user) %>
           </span>
           <span class="col-10 bg-light rounded-pill px-3" style="margin-right: -15px;">
-            <span class="d-block text-secondary"><%= comment.user.name unless comment.user_id.nil? %></span>
+            <span class="d-block text-secondary"><%= truncate comment.user.name %></span>
             <%= comment.content %>
           </span>
           <span class="col-1 text-end pe-3 align-self-center">
