--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <% content_for :signup do %>
-  <p class="col-12 text-center mt-1 border-light">
+  <p class="col-12 text-center mt-2 border-light">
     Have an account?
-    <%= link_to 'Login now', root_path, class: "" %>
+    <%= link_to 'Login now', root_path %>
   </p>
 
   <h1>Sign up</h1>
@@ -17,6 +17,6 @@
     <% @user.errors.full_messages_for(:password).each do |message| %>
       <span class="text-danger"><%= message %></span>
     <% end %>
-    <%= form.submit class: 'btn btn-gradient w-100 my-2 text-white'%>
+    <%= form.submit class: 'btn btn-gradient w-100 my-2'%>
   <% end %>
 <% end %>
