--- a/app/views/logins/_nav.html.erb
+++ b/app/views/logins/_nav.html.erb
@@ -1,6 +1,10 @@
-<%= link_to '', root_path, class: "col-2 bi bi-arrow-left-circle fs-3 color-theme" %>
-<span class="col-10 text-end mb-2">
-  <span><%=  truncate @_current_user.name %></span>
-  <%= picture(@_current_user) %>
-  <%= link_to '', logout_path, data: { turbo_method: :delete }, class: "fs-5 bi bi-box-arrow-right color-theme" %>
-</span>
+<nav class="col-12">
+  <div class="row">
+    <%= link_to '', root_path, class: "col-2 bi bi-arrow-left-circle fs-3 color-theme" %>
+    <div class="col-10 text-end mb-2">
+      <span><%=  truncate @_current_user.name %></span>
+      <%= picture(@_current_user) %>
+      <%= link_to '', logout_path, data: { turbo_method: :delete }, class: "fs-5 bi bi-box-arrow-right color-theme" %>
+    </div>
+  </div>
+</nav>
