--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,11 +1,9 @@
-<div class="card mb-2">
-  <div class="card-link row justify-content-between">
-    <div class="col-10 text-secondary">
-      <%= picture(post.user) %>
-      <span class="text-dark"><%= truncate post.user.name %></span>
-      <time><%= time_ago_in_words_only_today post.created_at%></time>
-    </div>
-    <div class="col-2 text-end px-3"><%= render 'posts/link', post: post %></div>
+<article class="card mb-2">
+  <div class="card-link">
+    <%= picture(post.user) %>
+    <span><%= truncate post.user.name %></span>
+    <time class="text-secondary" datetime="<%= post.created_at.localtime %>"><%= time_ago_in_words_only_today post.created_at%></time>
+    <span class="float-end pe-1"><%= render 'posts/link', post: post %></span>
   </div>
   <h1 class="card-text mb-2 mx-1">
     <%= link_to post.content, post, class: "text-decoration-none text-dark" %>
@@ -20,8 +18,6 @@
     <% end %>
   </div>
   <% if current_page?(post_path(post)) %>
-    <div class="card-text">
-      <%= render 'comments/form', post: post %>
-    </div>
+    <%= render 'comments/form', post: post %>
   <% end %>
-</div>
+</article>
