--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,16 +1,8 @@
 <header class="row">
-  <a href="/" class="navbar-brand text-center">
-    <span class="bi bi-circle-fill display-6 color-theme"></span>
-    <span class="bi bi-circle-fill display-6 color-theme-light"></span>
-    <span class="color-brand">PostooCommentoo</span>
-  </a>
+  <%= render 'layouts/brand' %>
   <% if logged_in? %>
     <%= render 'logins/nav' %>
   <% else %>
-    <% if content_for?(:signup) %>
-      <%= yield :signup %>
-    <% else %>
-      <%= render 'logins/form' %>
-    <% end %>
+    <%= render 'logins/form' unless current_page?(new_user_path) %>
   <% end %>
 </header>
