Align text-logo brand

--- a/app/views/layouts/_brand.html.erb
+++ b/app/views/layouts/_brand.html.erb
@@ -1,5 +1,5 @@
 <a href="/" class="navbar-brand text-center">
-  <span class="bi bi-circle-fill display-6 color-theme"></span>
-  <span class="bi bi-circle-fill display-6 color-theme-light"></span>
-  <span class="color-brand">PostooCommentoo</span>
+  <span class="bi bi-circle-fill display-6 color-theme align-middle"></span>
+  <span class="bi bi-circle-fill display-6 color-theme-light align-middle"></span>
+  <span class="color-brand align-middle">PostooCommentoo</span>
 </a>
